--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>controle Financeiro</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c93f4c944c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <div>
-            <img src="" alt="">
+            <img src="jake.png" alt="">
         </div>
         <div>
             <p>BEM-VINDO LETÍCIA</p>
             <p>Esse é o seu controle financeiro</p>
         </div>
     </header>
-    <hr>
     <main>
         <div class="resumo">
             <div>
@@ -63,7 +63,6 @@
                         <th class="columnAcao"></th>
                     </tr>
                 </thead>
-                <hr>
                 <tbody></tbody>
             </table>
         </div>
